Fixed layout sizes on mobile

--- a/new/styles.css
+++ b/new/styles.css
@@ -125,13 +125,13 @@ nav{
   margin: 0;
   padding: 4rem 9rem;
   position: fixed;
-  right: 0;
   top: -38rem;
   visibility: hidden;
   opacity: 0;
   transition: 0.5s all;
   border-radius: 2rem;
-  margin: 5rem 3rem 5rem 5rem;
+  margin: 6rem 3rem;
+  left: 0;
   right: 0;
   box-shadow: 0px 3px 6px rgba(0,0,0, 0.2);
 }
@@ -202,7 +202,7 @@ nav{
 }
 .subTitle{
   color: #000;
-  font-size: 6.5rem;
+  font-size: 6rem;
   font-weight: 800;
   line-height: 9rem;
   margin: 1rem 0 2rem 0;
@@ -319,7 +319,7 @@ h4{
   text-align: center;
 }
 .content{
-  padding: 6rem 6rem 12rem 6rem;
+  padding: 6rem 3rem 12rem 3rem;
   max-width: 130rem;
 }
 .about p{
@@ -346,7 +346,7 @@ h4{
   text-decoration: none;
 }
 .about p.emojis{
-  font-size: 5rem;
+  font-size: 4rem;
 }
 .diplomas strong{
   margin-right: 1rem;
@@ -382,20 +382,21 @@ h4{
 ::placeholder{
   color: #8B8B8B;
 }
-button{
+.button{
   padding: 3rem 7rem;
-  max-width: 40rem;
+  width: 100%;
   color: #FFF;
   background: #1F1F24;
   font-size: 3rem;
   outline: none;
   border-radius: 5rem;
   border: none;
-  float: right;
+  margin: auto;
   margin-top: 5rem;
   transition: all 1s;
+  cursor: pointer;
 }
-button:hover{
+.button:hover{
   box-shadow: 0px 3px 6px #00000029;
 }
 footer{
@@ -442,7 +443,18 @@ a.navIcon{
   background: url("img/close.svg") no-repeat center center;
 }
 @media (min-width: 980px) {
-
+  .button{
+    margin: 5rem 0 0 0;
+    float: right;
+    max-width: 40rem;
+  }
+  .about p.emojis{
+    font-size: 5rem;
+  }
+  .content{
+    padding: 6rem 6rem 12rem 6rem;
+    max-width: 130rem;
+  }
   .products{
     flex-direction: row;
     justify-content: center;
